--- a/anim.html
+++ b/anim.html
@@ -4,15 +4,27 @@
   <meta charset="utf-8">
   <title>animate demo</title>
   <style>
-  div {
-    position: relative;
-    background-color: #abc;
-    top:1000px;
+.block1 {
+    position: absolute;
+    top:100px;
     left: 1000px;
-    width: 1000px;
-    height: 10px;
+    width: 170px;
+    height: 342px;
     margin: 5px;
   }
+.block1 img {
+  position:absolute;
+ left:0;
+ -webkit-transition: opacity 0.3s ease-in-out;
+ -moz-transition: opacity 0.3s ease-in-out;
+ -o-transition: opacity 0.3s ease-in-out;
+ transition: opacity 0.3s ease-in-out;
+
+}
+
+#img2{
+  opacity:0;
+}
   </style>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
@@ -20,18 +32,24 @@
 
 <button id="left">&laquo;</button>
 <button id="right">&raquo;</button>
-<div class="block"></div>
-<div class="block"></div>
-<div class="block"></div>
-<div class="block"></div>
+<div class="block1">
+
+<img id="img2" src="images/guy_red.png"><img id="img1" src="images/yo.png">
+</div>
+
 
 <script>
+d=1;
 $( "#right" ).click(function() {
-  $( ".block" ).animate({ "top": "+=100px" }, "slow" );
+  $( "#img1" ).css("opacity", "0");
+  $( "#img2" ).css("opacity", "1");
 });
+d+=1;
+console.log(d);
 
 $( "#left" ).click(function(){
-  $( ".block" ).animate({ "top": "-=100px" }, "slow" );
+  $( "#img1" ).css("opacity", "1");
+  $( "#img2" ).css("opacity", "0");
 });
 </script>
 
